--- a/sass/layout/_global.scss
+++ b/sass/layout/_global.scss
@@ -1,7 +1,10 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
   background-color: #CCC;
-  // height: 3000px;
 }
 
 .btn.active.focus,
